# mobiliteee

path_planning_ws/src/maze_bot/: package.xml  setup.py
path_planning_ws/src/maze_bot/launch/: gazebo.launch.py  maze_1_robot_camera.launch.py  maze_2_robot_camera.launch.py  rviz.launch.py
path_planning_ws/src/maze_bot/maze_bot/: bot_localization.py  bot_mapping.py  bot_motionplanning.py  bot_pathplanning.py  maze_solver.py  utilities.py
path_planning_ws/src/maze_bot/urdf/: maze_bot.urdf
path_planning_ws/src/maze_bot/worlds/: maze_1.world  maze_2.world
